remove: remove useless code